--- a/app/html/user/uploads.html
+++ b/app/html/user/uploads.html
@@ -36,7 +36,7 @@
               <td>
                   <a href="@{file_url(item.fileid)}" class="upload-thumb">
                       @if item.thumbnail == '':
-                          <span class="placeholder" data-icon="link"></span>
+                          <span class="placeholder placeholder-video" data-icon="video" style="width:70px;height:70px;"></span>
                       @elif item.thumbnail == 'deferred':
                           <span class="placeholder deferred" data-icon="link"
                                 data-deferred="UserUploads-@{item.xid}"></span>
